Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21425

CMake: Qt Creator does not recognize some include files

XMLWordPrintable

    • All

      I been having this issue for some time. Not sure if this is problem with my cmake setup or Qt Creator. My project is c++ server app. It builds just fine from terminal and Qt Creator.

      The issue is that when I open some source file (cpp) Qt Creator complain "File not found"

      for some included headers. All these headers are my and come from git submodules in project. I am using cmake version 3.12.2 right now. But this was going on with previous versions of Qt Creator and cmake.

      Any idea where to start looking?

      If this is issue I could create test case and attach. Please advise.

        1. cmakeTest.tar.gz
          10 kB
          Robert J. Gebis
        2. Ubuntu unique_prt.png
          58 kB
          Robert J. Gebis
        For Gerrit Dashboard: QTCREATORBUG-21425
        # Subject Branch Project Status CR V

            kosjar Nikolai Kosjar
            oxoocoffee Robert J. Gebis
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes